[test] 스크랩관련 crud